<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.hellomistri.hellomistriprovidern.View.LeadDetaills">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_marginTop="-10dp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Mayur B"
                    android:fontFamily="@font/popbold"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/txt_creadit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:textColor="#AAAAAA" />

                <TextView
                    android:id="@+id/txt_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:textColor="#AAAAAA" />
            </LinearLayout>
            <View
                android:layout_width="150dp"
                android:layout_height="0dp"
                android:layout_marginRight="10dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="60dp"
                android:layout_marginRight="10dp"
                android:background="@color/grey_900" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|top"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/txt_date"
                    android:layout_width="wrap_content"
                    android:fontFamily="@font/popsemi"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:visibility="gone"
                    android:textSize="10dp"
                    android:text="TOMORROW" />

                <TextView
                    android:id="@+id/txt_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/popsemi"
                    android:padding="2dp"
                    android:text="10:12 AM"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_pannding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/green_100"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/accept"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_complet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/green_100"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/complete"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#F20820"
                android:gravity="center"
                android:padding="10dp"
                android:text="please_cancel"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_reject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#F40920"
                android:gravity="center"
                android:padding="10dp"
                android:text="Reject"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="gone" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:id="@+id/lvl_location"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/popbold"
                    android:padding="5dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/customer_location"
                    android:textColor="#AAAAAA" />

                <TextView
                    android:id="@+id/txt_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="-5dp"
                    android:fontFamily="@font/popsemi"
                    android:text="ambika pinnacle, Mota Varachha,\nbeside Lajamani Chowk,\nSurat, Gujarat 394101"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:elevation="10dp">

            <TextView
                android:id="@+id/txt_map"
                android:layout_width="match_parent"
                android:fontFamily="@font/popbold"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:background="@drawable/btn_rounded_green"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/see_on_map"
                android:textColor="@color/white" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <TextView
                android:id="@+id/txt_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/popbold"
                android:background="@drawable/btn_rounded_green"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/call_customer"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:elevation="10dp">

            <TextView
                android:id="@+id/Cancel"
                android:layout_width="match_parent"
                android:fontFamily="@font/popbold"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/red_900"
                android:background="@drawable/btn_rounded_green"
                android:gravity="center"
                android:visibility="gone"
                android:padding="10dp"
                android:text="Cancel"
                android:textColor="@color/white" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <TextView
                android:id="@+id/accept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/popbold"
                android:background="@drawable/btn_rounded_green"
                android:gravity="center"
                android:backgroundTint="@color/green_700"
                android:padding="10dp"
                android:text="Completed"
                android:textColor="@color/white" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_height="1dp"
            android:background="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/popbold"
            android:text="@string/select_setvice"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/serv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="guydygudugd"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/popsemi"/>


        <View
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_height="1dp"
            android:background="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/popbold"
            android:text="About Service"
            android:textColor="@color/black"
            android:textSize="18dp" />


        <TextView
            android:id="@+id/abtsrv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="guydygudugd"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/popsemi"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/listaddon"
            android:textColor="@color/black"
            android:visibility="gone"
            android:textSize="18dp" />

        <LinearLayout
            android:id="@+id/lvl_addon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:orientation="vertical">

        </LinearLayout>


    </LinearLayout>
</ScrollView>